# claude-crowed

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/claude_crowed/: __init__.py  backup.py  config.py  db.py  embedding.py  memory_store.py  migrate.py  models.py  proxy.py  server.py  visualizer.py
tests/: conftest.py  test_backup.py  test_db.py  test_embedding.py  test_memory_store.py  test_server.py
visualizer/: index.html  package-lock.json  package.json
visualizer/src/: App.tsx  DetailPanel.tsx  GraphView.tsx  SearchBar.tsx  StatsBar.tsx  api.ts  colors.ts  index.css  types.ts
